# ImInspect

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  imentt.hpp  main.cpp
examples/imentt/: imentt.hpp
include/: iminspect.hpp
src/: iminspect.cpp
